--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ VITE_FIREBASE_STORAGE_BUCKET=
 VITE_FIREBASE_MESSAGING_SENDER_ID=
 VITE_FIREBASE_APP_ID=
 VITE_FIREBASE_MEASUREMENT_ID=
+
+# ImgBB API Key (Free image hosting - No credit card required)
+# Get yours at: https://api.imgbb.com/
+VITE_IMGBB_API_KEY=
